# dqr

./: LICENSE  README.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/Scripts/: index.js
src/Styles/: index.css
